--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,17 @@ Fecha de creacion: 10/06/2023
 Hora: 9:17 pm 
 */
 
+input[type="number"]::-webkit-outer-spin-button,input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 *{
     box-sizing: border-box;
+}
+
+body{
+    background-color: #000000;
 }
 
 .contenedor{
@@ -21,5 +30,65 @@ Hora: 9:17 pm
 .caja-hija{
     display: inline-block;
     width: 220px;
+    color: #ffffff;
 }
 
+.formulario{
+    display: flex;
+    justify-content: center;
+    width: inherit;
+}
+
+/* ************ titulo **************** */
+
+.titulo{
+    color: #ffffff;
+    text-align: center;
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.formulario-hijo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    border: 3px solid #00d9ff;
+    box-shadow: 0px 0px 20px #00d9ff;
+    width: 400px;
+    height: 350px;
+}
+
+.formulario-hijo:hover{
+    border: 4px solid #b300ff;
+    box-shadow: 0px 0px 25px #b300ff;
+}
+
+.label-tablas{
+    margin: 8px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.caja-numero{
+    margin: 40px;
+    text-align: center;
+    border: none;
+    border-bottom: 2px solid #000000;
+    outline: none;
+}
+
+.button-tablas{
+    font-size: 20px;
+    width: 150px;
+    height: 45px;
+    margin: 10px;
+    border-radius: 10px;
+    border: 3px solid #90d5ff;
+    background-color: #000000;
+    color: #ffffff;
+    font-family: Verdana;
+    font-weight: 500;
+}
