--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,23 @@ body{
 }
 
 .caja-hija{
+    background-color: #ffffff;
     display: inline-block;
-    width: 220px;
-    color: #ffffff;
+    width: 200px;
+    padding: 10px;
+    margin: 3px;
+    
 }
 
 .formulario{
     display: flex;
     justify-content: center;
     width: inherit;
+}
+
+.caja-contenedor{
+    margin-top: 20px;
+    background-color: #000000;
 }
 
 /* ************ titulo **************** */
